[package]
name = "zoog"
version = "0.7.2-develop"
authors = ["Francis Russell <francis@unchartedbackwaters.co.uk>"]
edition = "2021"
homepage = "https://github.com/FrancisRussell/zoog"
readme = "README.md"
repository = "https://github.com/FrancisRussell/zoog.git"
license = "BSD-3-Clause"
keywords = ["ogg", "opus", "vorbis", "normalization"]
description = "Tools for modifying Ogg Opus output gain and R128 tags and Ogg Opus/Vorbis comment tags"
rust-version = "1.65"

[dependencies]
audiopus_sys = { version = "0.2.2", features = ["static"] }
bs1770 = "1.0.0"
byteorder = "1.3.4"
ctrlc = { version = "3.2.3", features = [ "termination" ] }
derivative = "2.1.1"
num_cpus = "1.13.1"
ogg = "0.9.0"
opus = "0.3.0"
parking_lot = "0.12.1"
rayon = "1.5.3"
tempfile = "3.1.0"
thiserror = "1.0.23"
wild = "2.1.0"

[dependencies.clap]
version = "4.0.10"
default-features = false
features = [ "derive", "help", "std", "usage", "wrap_help", "suggestions" ]

[dev-dependencies.rand]
version = "0.8.0"
features = [ "small_rng" ]

[profile.release]
lto = "thin"
strip = "debuginfo"
