[package]
name = "zoog"
version = "0.9.1-develop"
authors = ["Francis Russell <francis@unchartedbackwaters.co.uk>"]
edition = "2021"
homepage = "https://github.com/FrancisRussell/zoog"
readme = "README.md"
repository = "https://github.com/FrancisRussell/zoog.git"
license = "BSD-3-Clause"
keywords = ["ogg", "opus", "vorbis", "normalization"]
description = "Tools for modifying Ogg Opus output gain and R128 tags and Ogg Opus/Vorbis comment tags"
rust-version = "1.80"

[dependencies]
audiopus_sys = { version = "0.2.2" }
bs1770 = "1.0.0"
byteorder = "1.3.4"
ctrlc = { version = "3.2.3", features = [ "termination" ], optional = true }
derivative = "2.1.1"
num_cpus = { version = "1.13.1", optional = true }
ogg = "0.9.0"
opus = "0.3.0"
parking_lot = { version = "0.12.1", optional = true }
rayon = { version = "1.5.3", optional = true }
tempfile = "3.4.0"
termcolor = { version = "1.4.1", optional = true }
thiserror = "2.0.17"
wild = { version = "2.1.0", optional = true }

[features]
default = ["audiopus_sys/static", "cli"]
cli = ["dep:clap", "dep:ctrlc", "dep:num_cpus", "dep:parking_lot", "dep:rayon", "dep:termcolor", "dep:wild"]
integration-tests = []

[dependencies.clap]
version = "4.0.10"
optional = true
default-features = false
features = [ "derive", "help", "std", "usage", "wrap_help", "suggestions" ]

[[bin]]
name = "opusgain"
required-features = ["cli"]

[[bin]]
name = "zoogcomment"
required-features = ["cli"]

[dev-dependencies]
rand = { version = "0.10.1", default-features = false, features = [ "std_rng" ] }

[profile.release]
lto = "thin"
strip = "debuginfo"
